# api-ingestion-pipeline

./: .gitignore  README.md  pyproject.toml  run.py
api_ingestion_pipeline/: config.py  runner.py
api_ingestion_pipeline/scripts/: db_loader.py  world_bank_ingestion.py
api_ingestion_pipeline/sql/: create_raw_tables.sql
api_ingestion_pipeline/utils/: api_ingestion.py  utils.py
filiere_data_template/: config.py  runner.py
filiere_data_template/scripts/: script_1.py  script_2.py
filiere_data_template/sql/: query.sql
filiere_data_template/utils/: base.py
notebooks/: notebook.ipynb
tests/: test_api_ingestion.py  test_db_loader.py  test_script_1.py  test_world_bank_ingestion.py
